# ChangeLog for dev-python/twisted-web
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.34 2008/08/08 03:03:57 jer Exp $

  08 Aug 2008; Jeroen Roovers <jer@gentoo.org> twisted-web-8.1.0.ebuild:
  Stable for HPPA (bug #231675).

  05 Aug 2008; Ferris McCormick <fmccor@gentoo.org>
  twisted-web-8.1.0.ebuild:
  Sparc stable, part of Bug #231675.

*twisted-web-8.1.0 (25 May 2008)

  25 May 2008; Thomas Raschbacher <lordvan@gentoo.org>
  +twisted-web-8.1.0.ebuild:
  Version Bump

*twisted-web-8.0.0 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org> +twisted-web-8.0.0.ebuild:
  Version bump.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  09 Jun 2007; Joe Peterson <lavajoe@gentoo.org> twisted-web-0.7.0.ebuild:
  Add ~x86-fbsd keyword

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  twisted-web-0.6.0.ebuild:
  Stable on sparc

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> twisted-web-0.6.0.ebuild:
  x86 stable

*twisted-web-0.7.0 (11 Jan 2007)

  11 Jan 2007; Marien Zwart <marienz@gentoo.org> twisted-web-0.6.0.ebuild,
  -twisted-web-0.6.0-r1.ebuild, +twisted-web-0.7.0.ebuild:
  Version bump, make twisted dependency stricter, drop revision patched to
  work with python 2.5 (use the new bump instead).

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  twisted-web-0.6.0.ebuild:
  Stable on Alpha.

  01 Aug 2006; Simon Stelling <blubb@gentoo.org>
  twisted-web-0.5.0-r1.ebuild:
  stable on amd64

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  twisted-web-0.6.0.ebuild:
  hppa stable, bug #139612

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> twisted-web-0.5.0-r3.ebuild,
  twisted-web-0.6.0.ebuild:
  Mark 0.5.0-r3 0.6.0 stable on ia64 #128688

  02 Jul 2006; Lars Weiler <pylon@gentoo.org> twisted-web-0.6.0.ebuild: