@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/Attic/twisted-web-8.1.0.ebuild,v 1.3 2008/08/08 03:03:57 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted-web/Attic/twisted-web-8.1.0.ebuild,v 1.4 2008/08/08 18:40:17 corsair Exp $
 
 MY_PACKAGE=Web
 
@@ -8,7 +8,7 @@ inherit twisted eutils versionator
 
 DESCRIPTION="Twisted web server, programmable in Python"
 
-KEYWORDS="~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ppc64 ~s390 ~sh sparc ~x86 ~x86-fbsd"
 
 DEPEND="=dev-python/twisted-$(get_version_component_range 1-2)*"
 
