@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/twisted
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted/ChangeLog,v 1.93 2008/08/08 03:03:20 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/twisted/ChangeLog,v 1.94 2008/08/08 18:38:45 corsair Exp $
+
+  08 Aug 2008; Markus Rothe <corsair@gentoo.org> twisted-8.1.0.ebuild:
+  Stable on ppc64; bug #231675
 
   08 Aug 2008; Jeroen Roovers <jer@gentoo.org> twisted-8.1.0.ebuild:
   Stable for HPPA (bug #231675).
